--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
-    android:background="#c34848"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3af0db"
+    android:gravity="center"
     tools:context="com.slidingfinishlayout.MainActivity">
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:text="滑动结束此界面"
+        android:textSize="50sp"/>
 
 
 </com.slidingfinishlayout.SlidingFinishView>
